Fix the flickering bug during eating

--- a/static/style.css
+++ b/static/style.css
@@ -87,7 +87,7 @@
     /* 将 .blue-box 左侧与页面中心对齐 */
     transform: translate(-50%, -50%);
     /* 使用 transform 属性将 .blue-box 居中 */
-    z-index: 0;
+    z-index: 1;
 }
 
 .video-box {
@@ -99,7 +99,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
 }
 
 .video-all {
@@ -113,7 +113,7 @@
     z-index: 4;
 }
 
-.myVideo2 {
+/* .myVideo2 {
     padding: 50px;
     width: 100%;
     height: 100%;
@@ -121,8 +121,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
-}
+    z-index: 2;
+} */
 
 .cute-text-output {
     position: fixed;
